...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:visibility="gone"
        android:backgroundTint="@color/colorPrimary"
...
