<resources>
    <string name="app_name">iCare</string>
    <string name="icare">iCare</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="care_provider">Care Provider</string>
    <string name="patient">Patient</string>
    <string name="problems">Problems</string>
    <string name="conditions">Problems</string>
    <string name="records">Records</string>
    <string name="condition_colon">Problem Details</string>
    <string name="condition_name_colon">Problem Name:</string>
    <string name="date_added_colon">Date Added:</string>
    <string name="description_colon">Description:</string>
    <string name="delete">Delete</string>
    <string name="delete_problem">Delete Problem</string>
    <string name="delete_record">Delete Record</string>
    <string name="view_records">View Records</string>
    <string name="save_problem">Save Problem</string>
    <string name="edit_condition">Edit Problem</string>
    <string name="edit_record">Edit Record</string>
    <string name="condition_name">Problem Name</string>
    <string name="condition">Problem</string>
    <string name="description">Description</string>
    <string name="patients">Patients</string>
    <string name="patient_s_problems">Patient\'s Problems</string>
    <string name="patient_name_colon">Patient Name:</string>
    <string name="search_problems_or_records">Search Problems or Records</string>
    <string name="contact_information">Contact Information</string>
    <string name="home">Home</string>
    <string name="username_colon">Username:</string>
    <string name="email_colon">Email:</string>
    <string name="your_profile">Your Profile</string>
    <string name="phone_colon">Phone:</string>
    <string name="profile">Profile</string>
    <string name="add_patient">Add Patient</string>
    <string name="save">Save</string>
    <string name="info">Info</string>
    <string name="geo">Geo</string>
    <string name="keyword">Keyword</string>
    <string name="body">Body</string>
    <string name="record_info">Record Info</string>
    <string name="date_and_time_colon">Date and Time:</string>
    <string name="comment_colon">Comment:</string>
    <string name="location">Location</string>
    <string name="body_location">Body Location</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="new_comment">New Comment</string>
    <string name="record_title_colon">Record Title:</string>
    <string name="problem_name_colon">Problem Name:</string>
    <string name="comment">Comment</string>
    <string name="search_patient_to_add">Search Patient to Add</string>
    <string name="comment_time_colon">Comment Time:</string>
    <string name="title_activity_add_edit_record">AddEditRecordActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="log_out">Log out</string>
    <string name="edit_contact_information">Edit Contact Information</string>
    <string name="view_profile_of_patient">View Profile Of Patient</string>
    <string name="results">Results</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="single_use_code">Single Use Code</string>
    <string name="title_activity_view_cpcomment">ViewCPCommentActivity</string>
</resources>
