...
        android:text="@string/record_title_colon"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/record_date_and_time_label"
        app:layout_constraintTop_toBottomOf="@+id/patient_record_main_label_info" />

    <TextView
        android:id="@+id/view_record_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
...
        android:text="@string/comment_colon"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/record_date_and_time_label"
        app:layout_constraintTop_toBottomOf="@+id/record_date_and_time" />

    <TextView
        android:id="@+id/record_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
...

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/patient_record_body_label_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
...
                app:layout_constraintEnd_toStartOf="@+id/vertical_center_guideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/front_body_location_photo"
                app:layout_constraintTop_toBottomOf="@+id/front_head_button" />

            <Button
                android:id="@+id/front_right_arm_button"
                android:backgroundTint="@android:color/transparent"
                android:layout_width="38dp"
                android:layout_height="146dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="68dp"
...
                app:layout_constraintEnd_toEndOf="@+id/front_right_leg_button"
                app:layout_constraintHorizontal_bias="0.455"
                app:layout_constraintStart_toStartOf="@+id/front_left_arm_button"
                app:layout_constraintTop_toBottomOf="@+id/front_torso_button" />

            <Button
                android:id="@+id/back_head_button"
                android:backgroundTint="@android:color/transparent"
                android:layout_width="163dp"
                android:layout_height="120dp"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toStartOf="@+id/vertical_center_guideline"
                app:layout_constraintHorizontal_bias="0.0"
...
                app:layout_constraintEnd_toEndOf="@+id/back_body_location_photo"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/vertical_third_guideline"
                app:layout_constraintTop_toBottomOf="@+id/back_torso_button" />

            <Button
                android:id="@+id/back_left_leg_button"
                android:backgroundTint="@android:color/transparent"
                android:layout_width="45dp"
                android:layout_height="188dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
...
